stuf/src/p4/tests/t012.gpl
triangle my_rectangle(x=4.2);
pixmap mypixmap(red="rover", y=20, blue="moody");
